# learning-fastapi

./: app.py  db.py  pyproject.toml  routes.py  schemas.py
routes/: files.py  items.py  routes.py  users.py
